src/app/styles.scss
.filters-button {
  margin-left: 10px !important;
}

.filters-button + fs-filter-actions:not(:empty) {
  margin-left: 5px;
}

fs-filter-actions:not(:empty) {
  margin-left: 10px;
}

.saved-filter-last-item {
  border-top: 1px solid #cfcfcf !important;
}

